src/render/typst/snapshots/ntropy__render__typst__emitter__tests__indented_code_block.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"    indented code\\n    second line\")"
---
```
indented code
second line
```
