src/render/typst/snapshots/ntropy__render__typst__emitter__tests__kitchen_sink_combines_every_inline_construct-2.snap
---
source: src/render/typst/emitter.rs
expression: warnings
---
[
    Warning {
        message: "remote image cannot be embedded; linked instead: https://host/img.png",
    },
    Warning {
        message: "dropped raw HTML: <div>raw block</div>",
    },
]
