src/render/typst/snapshots/ntropy__render__typst__emitter__tests__list_item_with_a_nested_code_block_indents_it.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"- item\\n\\n  ```\\n  code\\n  ```\")"
---
- item

  ```
  code
  ```
