src/render/typst/snapshots/ntropy__render__typst__emitter__tests__loose_item_with_a_continuation_paragraph_indents_it.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"- First paragraph.\\n\\n  Second paragraph.\\n- Next item\")"
---
- First paragraph\.

  Second paragraph\.

- Next item
