src/render/typst/snapshots/ntropy__render__typst__emitter__tests__ordered_and_bullet_lists_nested_together.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"1. first\\n   - bullet a\\n   - bullet b\\n2. second\")"
---
1. first
   - bullet a
   - bullet b
2. second
