src/render/typst/snapshots/ntropy__render__typst__emitter__tests__quote_with_multiple_paragraphs.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"> First.\\n>\\n> Second.\")"
---
#quote(block: true)[
First\.

Second\.
]
