src/render/typst/snapshots/ntropy__render__typst__emitter__tests__table_body_row_shorter_than_the_header_is_padded.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"| H1 | H2 | H3 |\\n| --- | --- | --- |\\n| a | b | c |\\n| d |\")"
---
#table(
columns: 3,
align: (auto, auto, auto,),
table.header([H1], [H2], [H3],),
[a], [b], [c],
[d], [], [],
)
