src/render/typst/snapshots/ntropy__render__typst__emitter__tests__table_cells_escape_markup_active_text.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"| Name | Note |\\n| --- | --- |\\n| a*b | c_d |\")"
---
#table(
columns: 2,
align: (auto, auto,),
table.header([Name], [Note],),
[a\*b], [c\_d],
)
