src/render/typst/snapshots/ntropy__render__typst__emitter__tests__table_with_default_alignment.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"| H1 | H2 |\\n| --- | --- |\\n| a | b |\")"
---
#table(
columns: 2,
align: (auto, auto,),
table.header([H1], [H2],),
[a], [b],
)
