src/render/typst/snapshots/ntropy__render__typst__emitter__tests__table_with_every_alignment.snap
---
source: src/render/typst/emitter.rs
expression: "emit(\"| L | C | R |\\n| :--- | :---: | ---: |\\n| a | b | c |\")"
---
#table(
columns: 3,
align: (left, center, right,),
table.header([L], [C], [R],),
[a], [b], [c],
)
